--- a/javascript-template.html
+++ b/javascript-template.html
@@ -10,12 +10,12 @@
     </style>
 </head>
 <body>
-<canvas id="gameCanvas" width="200" height="200"></canvas>
+<canvas id="gameCanvas" width="500" height="500"></canvas>
 
 <script>
    const FPS = 30;
    const FRICTION = 0.7;
-   const SHIP_SIZE = 100; //height of the ship
+   const SHIP_SIZE = 30; //height of the ship
    const TURN_SPEED = 360; //
    const SHIP_THRUST = 5;
 
@@ -80,26 +80,9 @@
    function update() {
       //draw space
 
-      // ctx.fillStyle = 'black';
-      // ctx.fillRect(0, 0, canv.width, canv.height)
+      ctx.fillStyle = 'black';
+      ctx.fillRect(0, 0, canv.width, canv.height)
 
-      ctx.strokeStyle = 'blue';
-      ctx.lineWidth = 1;
-      ctx.beginPath();
-      ctx.arc(ship.x, ship.y, ship.r, 0, 2 * Math.PI);
-      ctx.closePath();
-      ctx.stroke();
-
-      ctx.strokeStyle = 'green';
-      ctx.beginPath();
-      ctx.moveTo(0, 100);
-      ctx.lineTo(200, 100);
-      ctx.closePath();
-      ctx.moveTo(100, 0);
-      ctx.lineTo(100, 200);
-      ctx.closePath();
-      ctx.stroke();
-      ctx.fill();
 
       // thrust the ship
       if (ship.thrusting) {
@@ -111,15 +94,15 @@
          ctx.strokeStyle = 'yellow';
          ctx.lineWidth = SHIP_SIZE / 20;
          ctx.beginPath();
-         ctx.moveTo(  // nose of the ship
+         ctx.moveTo(  //
             ship.x - ship.r * (2 / 3 * Math.cos(ship.a) + 0.3 * Math.sin(ship.a)),
             ship.y + ship.r * (2 / 3 * Math.sin(ship.a) - 0.3 * Math.cos(ship.a))
          )
-         ctx.lineTo( // rear left
+         ctx.lineTo( //
             ship.x - ship.r * 1.5 * Math.cos(ship.a),
             ship.y + ship.r * 1.5 * Math.sin(ship.a)
          )
-         ctx.lineTo( // rear right
+         ctx.lineTo( //
             ship.x - ship.r * (2 / 3 * Math.cos(ship.a) - 0.3 * Math.sin(ship.a)),
             ship.y + ship.r * (2 / 3 * Math.sin(ship.a) + 0.3 * Math.cos(ship.a))
          )
@@ -132,8 +115,7 @@
       }
 
       //draw ship
-      ship.a = 135 / 180 * Math.PI
-      ctx.strokeStyle = 'black';
+      ctx.strokeStyle = 'white';
       // ctx.lineWidth = SHIP_SIZE / 8;
       ctx.lineWidth = 1;
       ctx.beginPath();
