--- a/javascript-template.html
+++ b/javascript-template.html
@@ -10,47 +10,134 @@
     </style>
 </head>
 <body>
-<canvas id="gameCanvas" width="500" height="500"></canvas>
+<canvas id="gameCanvas" width="1000" height="600"></canvas>
 
 <script>
+   // Game
    const GAME_LIVES = 3;
    const FPS = 30;
    const FRICTION = 0.7;
+
+   // Lasers
    const LASER_DIST = 0.4;
    const LASER_MAX = 10;
    const LASER_SPD = 500;
    const LASER_EXPLODE_DUR = 0.1;
+
+   // Asteroids
    const ROIDS_JAG = 0.5;
-   const ROIDS_NUM = 1; // starting number of asteroids
+   const ROIDS_NUM = 10; // starting number of asteroids
    const ROIDS_SIZE = 100;
-   const ROIDS_SPD = 50;
+   const ROIDS_SPD = 100;
    const ROIDS_VERT = 10; // average number of vertices of each asteroids
+
+   const ROID_PTS_LGE = 20;
+   const ROID_PTS_MED = 50;
+   const ROID_PTS_SML = 100;
+
+   // Ship
    const SHIP_SIZE = 30; //height of the ship
    const SHIP_INVIS_DUR = 3; //height of the ship
    const SHIP_BLINK_DUR = 0.1; //height of the ship
    const TURN_SPEED = 300; //
-   const SHIP_THRUST = 5;
+   const SHIP_THRUST = 6;
    const MAX_THRUST = 4;
+   const SHIP_EXPLODE_DUR = 0.3;
+
+   // Testing
    const SHOW_BOUNDING = false;
    const SHOW_CENTER_DOT = false;
-   const SHIP_EXPLODE_DUR = 0.3;
+
    const TEXT_FADE_TIME = 2.5;
    const TEXT_SIZE = 40;
+
+   const SOUN_ON = true;
+   const MUSIC_ON = true;
 
    /** @type {HTMLCanvasElement} */
    var canv = document.getElementById('gameCanvas');
    var ctx = canv.getContext('2d');
 
+   // set up sound effects
+   var fxLaser = new Sound('./sounds/laser.m4a', 5, 0.3);
+   var fxExplode = new Sound('./sounds/explode.m4a');
+   var fxHit = new Sound('./sounds/hit.m4a', 5, 0.8);
+   var fxThrust = new Sound('./sounds/thrust.m4a');
+
+   // set up the music
+   var music = new Music('./sounds/music-low.m4a', './sounds/music-high.m4a');
+
+   var roidsLeft, roidsTotal;
+
+   function Sound(src, maxStreams = 1, vol = 1) {
+        this.streamNum = 0;
+        this.streams = [];
+        for (var i = 0; i < maxStreams; i++) {
+           this.streams.push(new Audio(src));
+           this.streams[i].volume = vol;
+        }
+
+        this.play = function () {
+           if (SOUN_ON) {
+              this.streamNum = (this.streamNum + 1) % maxStreams;
+              this.streams[this.streamNum].play();
+           }
+        }
+
+        this.stop = function () {
+           this.streams[this.streamNum].pause();
+           this.streams[this.streamNum].curruntTime = 0;
+        }
+   }
+
+   function Music(srcLow, srcHigh) {
+        this.soundLow = new Audio(srcLow);
+        this.soundHigh = new Audio(srcHigh);
+        this.low = true;
+        this.tempo = 1.0;
+        this.beatTime = 0;
+
+        this.setAsteroidRatio = function (ratio) {
+           this.tempo = 1 - 0.75 * (1 - ratio);
+        }
+
+        this.play = function () {
+           if (MUSIC_ON) {
+              if (this.low) {
+                 this.soundLow.play()
+              } else {
+                 this.soundHigh.play()
+              }
+              this.low = !this.low;
+           }
+        }
+
+        this.tick = function () {
+           if (this.beatTime == 0) {
+              this.play();
+              this.beatTime = Math.ceil(this.tempo * FPS);
+           } else {
+              this.beatTime--;
+           }
+        }
+   }
+
+   var highScore;
+   if (!localStorage.getItem('high-score')) {
+      localStorage.setItem('high-score', '0')
+   }
+
    // set up the game parameters
-   var level, roids = [], ship, text, textAlpha, lives, points;
+   var level, roids = [], ship, text, textAlpha, lives, score;
    newGame();
 
    function newGame() {
-      points = 0;
+      score = 0;
       lives = GAME_LIVES;
       level = 0;
       newShip()
       newLevel();
+      highScore = localStorage.getItem('high-score');
    }
 
    function newShip() {
@@ -101,6 +188,7 @@
             dist: 0,
             explodeTime: 0
          })
+         fxLaser.play();
       }
 
       // prevent further shooting
@@ -109,6 +197,8 @@
 
    function createAsteroidBelt() {
       roids = [];
+      roidsTotal = (ROIDS_NUM + level) * 7;
+      roidsLeft = roidsTotal;
       var x, y;
       for (var i = 0; i < ROIDS_NUM + level; i++) {
          do {
@@ -127,17 +217,26 @@
       if (r == Math.ceil(ROIDS_SIZE / 2)) {
          roids.push(newAsteroid(x, y, Math.ceil(ROIDS_SIZE / 4)))
          roids.push(newAsteroid(x, y, Math.ceil(ROIDS_SIZE / 4)))
+         score += ROID_PTS_LGE;
       } else if (r == Math.ceil(ROIDS_SIZE / 4)) {
          roids.push(newAsteroid(x, y, Math.ceil(ROIDS_SIZE / 8)))
          roids.push(newAsteroid(x, y, Math.ceil(ROIDS_SIZE / 8)))
+         score += ROID_PTS_MED;
+      } else if (r == Math.ceil(ROIDS_SIZE / 8)) {
+         score += ROID_PTS_SML;
       }
 
-      // add 1 to points
-      if (r == Math.ceil(ROIDS_SIZE / 8)) {
-         points++;
+      // check high score
+      if (score > highScore) {
+         highScore = score;
       }
 
       roids.splice(index, 1);
+      fxHit.play();
+
+      // calculate ratio of remaining asteroids
+      roidsLeft--;
+      music.setAsteroidRatio(roidsLeft == 0 ? 1 : roidsLeft / roidsTotal);
 
       // new level shen no more asteroids
       if (roids.length == 0) {
@@ -172,9 +271,14 @@
 
    function explodeShip() {
       ship.explodeTime = Math.ceil(SHIP_EXPLODE_DUR * FPS)
+      fxExplode.play();
    }
 
    function gameOver() {
+      if (score > localStorage.getItem('high-score')) {
+         localStorage.setItem('high-score', score.toString())
+      }
+
       ship.dead = true;
       text = 'Game Over';
       textAlpha = 1.0;
@@ -246,6 +350,9 @@
       var blinkOn = ship.blinkNum % 2 === 0;
       var exploding = ship.explodeTime > 0;
 
+      // tick the music
+      music.tick();
+
       //draw space
       ctx.fillStyle = 'black';
       ctx.fillRect(0, 0, canv.width, canv.height)
@@ -254,6 +361,8 @@
       // thrust the ship
       if (ship.thrusting && !ship.dead) {
          const currentThrust = Math.sqrt(Math.abs(ship.thrust.x ^ 2) + Math.abs(ship.thrust.y ^ 2));
+
+         fxThrust.play();
 
          if (currentThrust <= MAX_THRUST) {
             ship.thrust.x += SHIP_THRUST * Math.cos(ship.a) / FPS;
@@ -285,6 +394,7 @@
       } else {
          ship.thrust.x -= FRICTION * ship.thrust.x / FPS;
          ship.thrust.y -= FRICTION * ship.thrust.y / FPS;
+         fxThrust.stop();
       }
 
       if (!exploding) {
@@ -398,11 +508,19 @@
          newGame();
       }
 
-      // draw the game points
+      // draw the game score
       ctx.fillStyle = 'white';
+      ctx.textAlign = 'right';
       ctx.textBaseline = 'middle';
-      ctx.font = 'small-caps 28px dejavu sans mono';
-      ctx.fillText(`Points: ${points}`, canv.width - SHIP_SIZE * 3.5, SHIP_SIZE);
+      ctx.font = 'small-caps ' + TEXT_SIZE * 0.5 + 'px dejavu sans mono';
+      ctx.fillText(`Score: ${score}`, canv.width - SHIP_SIZE / 2, SHIP_SIZE);
+
+      // draw the high score
+      ctx.fillStyle = 'white';
+      ctx.textAlign = 'center';
+      ctx.textBaseline = 'middle';
+      ctx.font = 'small-caps ' + TEXT_SIZE * 0.5 + 'px dejavu sans mono';
+      ctx.fillText(`High Score: ${highScore}`, canv.width / 2, SHIP_SIZE);
 
       // draw lives
       var lifeColour;
@@ -421,7 +539,7 @@
             const {x: lx, y: ly} = ship.lasers[j];
 
             // detect hits
-            if (ship.lasers[j].explodeTime == 0 && distBetweenPoints(ax, ay, lx, ly) < ar) {
+            if (ship.lasers[j].explodeTime == 0 && distBetweenPoints(ax, ay, lx, ly) < ar + ar / 10) {
                // remove laser
                // ship.lasers.splice(j, 1);
 
